--- a/.github/changelog-config.json
+++ b/.github/changelog-config.json
@@ -66,5 +66,23 @@
   },
   "max_tags_to_fetch": 200,
   "max_pull_requests": 200,
-  "max_back_track_time_days": 365
+  "max_back_track_time_days": 365,
+  "ignore_pre_releases": true,
+  "filter_regex_title": "(?:^.[^)]*)\\):",
+  "filter_regex_exclude": "",
+  "reference": {
+    "current": "current/head",
+    "target": "target/base"
+  },
+  "base_branches": ["main", "master"],
+  "max_commits_count": 100,
+  "tag_resolver": {
+    "method": "semver",
+    "filter": "^v"
+  },
+  "duplicate_filter": {
+    "pattern": "(?:.*)?\\s\\((?:#\\d+(?:, )?)+\\)",
+    "on_property": "title",
+    "method": "match"
+  }
 }
