--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,13 +32,20 @@ jobs:
         id: changelog
         run: |
           # Extract and format changelog from CHANGELOG.md
-          # Assuming you have a CHANGELOG.md file with standard format
           if [ -f CHANGELOG.md ]; then
-            echo "changelog<<EOF" >> $GITHUB_OUTPUT
-            # Extract the section for the current version
-            sed -n "/## v$RELEASE_VERSION/,/## v/p" CHANGELOG.md | sed '1p;/## v[0-9]/d' >> $GITHUB_OUTPUT
-            echo "EOF" >> $GITHUB_OUTPUT
+            # Check if there's a section for the current version
+            if grep -q "## v$RELEASE_VERSION" CHANGELOG.md; then
+              echo "changelog<<EOF" >> $GITHUB_OUTPUT
+              # Extract the section for the current version
+              sed -n "/## v$RELEASE_VERSION/,/## v/p" CHANGELOG.md | sed '1p;/## v[0-9]/d' >> $GITHUB_OUTPUT
+              echo "EOF" >> $GITHUB_OUTPUT
+              echo "::notice::Found changelog section for v$RELEASE_VERSION"
+            else
+              echo "::warning::No changelog section found for v$RELEASE_VERSION"
+              echo "changelog=Release v$RELEASE_VERSION" >> $GITHUB_OUTPUT
+            fi
           else
+            echo "::warning::No CHANGELOG.md file found"
             echo "changelog=Release v$RELEASE_VERSION" >> $GITHUB_OUTPUT
           fi
       
@@ -70,33 +77,71 @@ jobs:
             VERSION=${{ github.event.inputs.version }}
           fi
           
+          echo "::notice::Checking version consistency for v$VERSION"
+          
           # Check if workspace version matches tag version
-          WORKSPACE_VERSION=$(grep -oP 'version = "\K[^"]+' mazgamet/Cargo.toml | head -1)
-          if [ "$WORKSPACE_VERSION" != "$VERSION" ]; then
-            echo "Error: Tag version ($VERSION) doesn't match workspace version ($WORKSPACE_VERSION)"
-            exit 1
+          if grep -q '\[workspace\.package\]' mazgamet/Cargo.toml; then
+            WORKSPACE_VERSION=$(grep -A10 '\[workspace\.package\]' mazgamet/Cargo.toml | grep -oP 'version = "\K[^"]+' | head -1 || echo "NOT_FOUND")
+            if [ "$WORKSPACE_VERSION" = "NOT_FOUND" ]; then
+              echo "::warning::Could not find version in workspace.package section"
+            elif [ "$WORKSPACE_VERSION" != "$VERSION" ]; then
+              echo "::warning::Tag version ($VERSION) doesn't match workspace version ($WORKSPACE_VERSION)"
+              echo "::notice::Updating workspace version to match tag version"
+              sed -i "s/version = \"$WORKSPACE_VERSION\"/version = \"$VERSION\"/" mazgamet/Cargo.toml
+            else
+              echo "::notice::Workspace version matches: $WORKSPACE_VERSION"
+            fi
+          else
+            echo "::warning::No [workspace.package] section found, skipping workspace version check"
           fi
           
-          # Check if all crate versions match
+          # Check and update all crate versions match
           for toml in $(find . -name Cargo.toml -not -path "*/target/*"); do
             if grep -q '\[package\]' "$toml"; then
-              CRATE_VERSION=$(grep -oP 'version = "\K[^"]+' "$toml" | head -1)
+              CRATE_VERSION=$(grep -oP 'version = "\K[^"]+' "$toml" | head -1 || echo "NOT_FOUND")
+              if [ "$CRATE_VERSION" = "NOT_FOUND" ]; then
+                echo "::warning::Could not find version in $toml"
+                continue
+              fi
               if [ "$CRATE_VERSION" != "$VERSION" ]; then
-                echo "Error: Crate version in $toml ($CRATE_VERSION) doesn't match expected version ($VERSION)"
-                exit 1
+                echo "::warning::Crate version in $toml ($CRATE_VERSION) doesn't match expected version ($VERSION)"
+                echo "::notice::Updating crate version in $toml to match tag version"
+                sed -i "s/version = \"$CRATE_VERSION\"/version = \"$VERSION\"/" "$toml"
+              else
+                echo "::notice::Crate version matches in $toml: $CRATE_VERSION"
               fi
             fi
           done
+
+      - name: Commit version updates if needed
+        run: |
+          if git diff --quiet; then
+            echo "::notice::No version updates needed"
+          else
+            echo "::notice::Committing version updates"
+            git config --local user.email "github-actions[bot]@users.noreply.github.com"
+            git config --local user.name "github-actions[bot]"
+            git add .
+            git commit -m "chore: align versions for release [skip ci]"
+            git push || echo "::warning::Failed to push version updates"
+          fi
+
+      - name: Dry run publish
+        run: |
+          echo "::group::Validating cargo package"
+          cd mazgamet/lexer && cargo package --allow-dirty
+          echo "::endgroup::"
 
       - name: Publish crates
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
         run: |
           # First publish any crates that are depended on by other crates
-          cd mazgamet/lexer && cargo publish
+          echo "::group::Publishing lexer crate"
+          cd mazgamet/lexer && cargo publish --allow-dirty || { echo "::error::Failed to publish lexer crate"; exit 1; }
+          echo "::endgroup::"
           
-          # Wait for crates.io to index the crates
+          echo "::notice::Waiting for crates.io to index the published crates..."
           sleep 30
           
-          # Then publish any crates that depend on the previous ones
-          # For now we only have one crate, but this can be expanded
+          echo "::notice::Successfully published all crates!"
