--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-resolver = "3"
+resolver = "2"
 members = ["lexer"]
 
 [workspace.package]
@@ -18,7 +18,10 @@ keywords = ["lexer", "parser", "compiler", "language"]
 [workspace.dependencies]
 log = "0.4"
 simplelog = "0.12"
-chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
+chrono = { version = "0.4", default-features = false, features = [
+    "std",
+    "clock",
+] }
 
 [workspace.lints.clippy]
 explicit_iter_loop = "warn"
