--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -29,7 +29,7 @@ jobs:
     name: Auto-Tag Latest Commit
     runs-on: ubuntu-latest
     # Don't run if the push was for a tag
-    if: '!startsWith(github.ref, "refs/tags/")'
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -84,7 +84,7 @@ jobs:
       - name: Install Rust stable toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
+          toolchain: "1.86.0"
 
       - name: Install Rust semver-tool
         run: |
