Chore: Switch workflows to use MY_GITHUB_TOKEN
The `auto-tag.yml` concurrency logic was modified:
- Group key for tag pushes now includes `run_id`, preventing
  cancellation of previous runs if the same tag is re-pushed.
- Group key for manual dispatches now uses an empty suffix instead of
  `run_id`; cancellation remains disabled for these manual runs.

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -59,7 +59,7 @@ jobs:
         # Use v6 which is the latest major version
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
           commit-message: "chore: update dependencies"
           title: "chore(deps): update Rust dependencies"
           body: |
