--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -21,7 +21,7 @@ on:
 
 # Cancel redundant runs, but allow manual dispatch to run
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name != 'workflow_dispatch' || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ (github.event_name != 'workflow_dispatch' && github.run_id) || '' }}
   cancel-in-progress: ${{ github.event_name != 'workflow_dispatch' }}
 
 jobs:
@@ -35,7 +35,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Required for tag history
-          token: ${{ secrets.GITHUB_TOKEN }} # Use provided token for writes
+          token: ${{ secrets.MY_GITHUB_TOKEN }} # Use provided token for writes
+
+      # If you use upload-artifact elsewhere, add this step before using it:
+      # - name: Download upload-artifact action
+      #   uses: actions/upload-artifact@v3
 
       - name: Set Git User
         run: |
