--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Commit and push changes
         if: steps.initial-audit.outputs.has_vulnerabilities == 'true'
         env:
-          MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Action Bot"
