--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Required for tag history
-          token: ${{ secrets.MY_GITHUB_TOKEN }} # Use provided token for writes
+          token: ${{ secrets.GITHUB_TOKEN }} # Use provided token for writes
 
       # If you use upload-artifact elsewhere, add this step before using it:
       # - name: Download upload-artifact action
