Add parser and AST components
Implement the foundation for syntax analysis with new crates:
- ast: Core AST node definitions and traits
- parser: Recursive descent parser that constructs AST from tokens

Add support for parsing let and return statements with error handling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["lexer", "repl"]
+members = ["lexer", "repl", "parser", "ast"]
 
 [workspace.package]
 version = "0.0.5"
